Make sure that older files with simple transform masks load fine

BUG:492320